welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:30: error: Unit does not take parameters
for (d <- 1 to 2){avance()()}
                          ^